<resources>
    <string name="app_name">云乐扫</string>
    <string name="home">主页</string>
    <string name="mode">模式</string>
    <string name="auto_mode">自动模式</string>
    <string name="advanced_mode">高级模式</string>
    <string name="history">历史记录</string>
    <string name="setting">设置</string>
    <string name="others">其它</string>
    <string name="help">使用帮助</string>
    <string name="about">关于我们</string>
    <string name="app_id">20180407000143698</string>
    <string name="security_key">7eflq1FNSEGlAzYwQhCY</string>
    <string name="about_us">本应用由寒冰小小莉及其团队提供。\n\n如果，你有任何问题,请使用以下联系方式：\n\nQQ:1543641386\n\n邮箱：1543641386@qq.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_body">BodyActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_capture_result">CaptureResultActivity</string>
    <string name="step_1">步骤一</string>
    <string name="step_2">步骤二</string>
    <string name="step_3">步骤三</string>

</resources>
