<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="主题"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="精确度" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="翻译方式" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="更多设置" />
    </group>

    <item android:title="@string/mode">
        <menu>
            <item
                android:id="@+id/auto_mode"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/auto_mode"
                android:checkable="true"/>
            <item
                android:id="@+id/advanced_mode"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/advanced_mode"
                android:checkable="true"/>
        </menu>
    </item>
    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/help"
                android:title="@string/help"/>
            <item
                android:id="@+id/about"
                android:title="@string/about"/>
        </menu>
    </item>
</menu>
